// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders correctly with end arrowPosition 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeCenter edge-center hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowDark monday-style-arrow-dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with hideWhenReferenceHidden 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={null}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeCenter edge-center hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowDark monday-style-arrow-dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with justify 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeEnd edge-end hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowDark monday-style-arrow-dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with position 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component left edgeCenter edge-center hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowDark monday-style-arrow-dark"
        data-placement="left"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with style 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeCenter edge-center hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "width": "200px",
          }
        }
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowDark monday-style-arrow-dark"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with theme 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeCenter edge-center hasTooltip has-tooltip"
    >
      <div
        className="tooltip monday-style-tooltip tooltipError monday-style-tooltip-error"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
      <div
        className="tooltipArrow monday-style-tooltip-arrow monday-style-arrow arrowError monday-style-arrow-error"
        data-placement="top"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "position": "absolute",
          }
        }
      />
    </div>
  </span>,
]
`;

exports[`Tooltip renders correctly with withoutDialog 1`] = `
<div
  className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
>
  test
</div>
`;

exports[`Tooltip renders correctly without arrow 1`] = `
Array [
  <div
    className=""
    data-testid="tooltip"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />,
  <span
    className="contentWrapper monday-style-dialog-content-wrapper"
    data-popper-reference-hidden={false}
    onClickCapture={[Function]}
    style={
      Object {
        "left": "0",
        "position": "absolute",
        "top": "0",
      }
    }
  >
    <div
      className="contentComponent monday-style-dialog-content-component top edgeCenter edge-center"
    >
      <div
        className="tooltip monday-style-tooltip tooltipDark monday-style-tooltip-dark"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        test
      </div>
    </div>
  </span>,
]
`;
